# streamlit_sql_crud

./: CLAUDE.md  LICENSE  PROJECT_STRUCTURE_AND_INTEGRATION_PLAN.md  README.md  TODO.md  pyproject.toml
streamlit_pydantic_crud/: __init__.py  create_delete_model.py  filters.py  input_fields.py  lib.py  many.py  params.py  pydantic_ui.py  pydantic_utils.py  read_cte.py  schema_builder.py  schemas.py  sql_ui.py  update_model.py
streamlit_sql/: __init__.py  create_delete_model.py  input_fields.py  lib.py  many.py  pydantic_ui.py  pydantic_utils.py  read_cte.py  sql_iu.py  update_model.py  utils.py
tests/: test_datetime_widget.py  test_radio_widget.py
