[tool.pyright]
venvPath = ".venv"
venv = "."
verboseOutput = false
reportConstantRedefinition = "warning"
reportUnnecessaryComparison = "warning"
reportAssertAlwaysTrue = "warning"
reportUnusedExpression = false
include = ["streamlit_pydantic_crud"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "build/*",
    "dist/*",
    ".venv/*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["streamlit_pydantic_crud"]

[tool.vulture]
exclude = []
ignore_decorators = []
ignore_names = []
make_whitelist = false
min_confidence = 0
paths = ["streamlit_pydantic_crud"]
sort_by_size = true
verbose = false

[tool.ruff]
exclude = [".venv", "whitelist.py", "alembic", "alembic_dev"]
line-length = 88

[tool.ruff.lint]
ignore = ["SIM108", "E501","PD901", "RET504", "PLR", "PTH123", "ISC001","ARG001","ARG002", "C901"]
select = ["UP","YTT", "A", "EM", "ICN","I", "SIM", "E", "F", "C90", "B", "C4", "FA", "ISC", "INP", "PIE", "RET", "TID", "ARG", "PTH", "ERA", "PD", "PL", "FLY", "NPY", "PERF", "FURB", "RUF"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["_self"]


[metadata]
description = "Streamlit Pydantic CRUD"
keyword = []
classifiers = [""]
author = "Anonymous"
author_email = ""

[project]
name = "streamlit_pydantic_crud"
version = "0.4.2"
description = "Enhanced CRUD interface for SQLAlchemy using Streamlit with Pydantic validation"
readme = "README.md"
# readme= "docs/README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
dependencies = [
    "python-dateutil",
    "pandas",
    "sqlalchemy",
    "streamlit",
    "streamlit_datalist",
    "streamlit_antd_components",
    "loguru>=0.7.3",
    "pydantic>=2.0.0",
]

[dependency-groups]

dev = [
    "setuptools",
    "ipython",
    "build",
    "rich",
    "isort",
    "vermin",
    "pandas-stubs",
    "vulture",
    "pdbpp",
    "pyright",
    "mkdocs",
    "mkdocs-material>=9.6.1",
	"mkdocstrings-python>=1.13.0",
]

[project.urls]
homepage = "https://github.com/af-ryb/streamlit_sql_crud"
documentation = "https://github.com/af-ryb/streamlit_sql_crud"
repository = "https://github.com/af-ryb/streamlit_sql_crud"
original = "https://github.com/edkedk99/streamlit_sql"
